Testcases/pos/test09.jl
function main()
a::Bool = true||false
if a == false
println("1")
else println("2")
end
end
main()
